Today I created the 2 page.
sfvkdbdfjkbukdsfvkjhsdfvb

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color:#b5f4ff;
+background-color: #ffd6d6;
 font-family: cursive;
 
 }
@@ -10,5 +10,5 @@ font-family: cursive;
 
 div{
     border-radius: 20px;
-    background-color: #fdffc4;
+    background-color: #ff8585;
 }
